<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DBA-OK</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Balance</string>
    <string name="title_section2">Daily Dish</string>
    <string name="title_section3">Hours</string>
    <string name="title_section4">Budget</string>
    <string name="title_section5">MyStats</string>

    <!-- Shared Preferences Strings -->
    <string name="preference_name">my_shared_preferences</string>
    <string name="preference_key_welcome_screen">welcome_screen</string>
    <string name="preference_key_username">user_name</string>
    <string name="preference_key_password">password</string>
    <string name="preference_key_kaf_closing">kafClosing</string>
    <string name="preference_key_collis_closing">collisClosing</string>
    <string name="preference_key_foco_closing">focoClosing</string>
    <string name="preference_key_novack_closing">novackClosing</string>
    <string name="preference_key_hop_closing">hopClosing</string>
	<string name="preference_key_balance">dbaBalance</string>
	<string name="preference_key_swipes">numMealSwipes</string>
	<string name="preference_key_dba_initial">initialDBA</string>
	
    <!-- Menu Strings -->
    <string name="ui_menu_search">search</string>
    <string name="ui_menu_send">send</string>
    <string name="ui_menu_add">add</string>
    <string name="ui_menu_quit">quit</string>
    <string name="ui_menu_feedback">feedback</string>
    <string name="ui_menu_about">about</string>
    <string name="ui_menu_share">share</string>
    <string name="ui_welcome_welcome_title">Welcome to DBA-OK</string>
    <string name="ui_welcome_signin_title">Sign Into ManageMyID</string>
    <string name="ui_welcome_email_title">Email Address</string>
    <string name="ui_welcome_email_hint">Enter your email address</string>
    <string name="ui_welcome_password_title">Password</string>
    <string name="ui_welcome_managemyid_title">Don\'t have a ManageMyID account?</string>
    <string name="ui_welcome_getmanagemyid_title">Get one here</string>
    <string name="ui_balance_swipes_title">Swipes Remaining</string>
    <string name="ui_balance_dba_title">DBA Remaining</string>
    <string name="ui_welcome_signin">Sign in</string>

    <!-- PREFERENCES Strings -->
    <string name="pref_category_notifications">Push Notifications</string>
    <string name="meal_reminder_preference_key">mealReminder</string>
    <string name="summary_meal_reminder_checkbox">Notifies you to use meal swipes</string>
    <string name="title_meal_reminder_checkbox">Meal Swipe Notification</string>
    <string name="yummy_reminder_preference_key">yummyReminder</string>
    <string name="summary_yummy_reminder_checkbox">Notifies you when your favorite meal is being served</string>
    <string name="title_yummy_reminder_checkbox">Favorite Meal Notifications</string>
    <string name="closing_reminder_preference_key">closingReminder</string>
    <string name="summary_closing_reminder_checkbox">Notifies you when specific dining halls are going to close</string>
    <string name="title_closing">Check locations for Closing Time Notifications</string>
    <string name="closing_kaf_key">KafPrefKey</string>
    <string name="title_closing_kaf">Kaf</string>
    <string name="summary_closing_kaf">Alert me when KAF is closing</string>
    <string name="closing_collis_key">CollisPrefKey</string>
    <string name="title_closing_collis">Collis</string>
    <string name="summary_closing_collis">Alert me when Collis is closing</string>
    <string name="closing_novack_key">NovackPrefKey</string>
    <string name="title_closing_novack">Novack</string>
    <string name="summary_closing_novack">Alert me when Novack is closing</string>
    <string name="closing_foco_key">FocoPrefKey</string>
    <string name="title_closing_foco">Foco</string>
    <string name="summary_closing_foco">Alert me when Foco is closing</string>
    <string name="closing_hop_key">HopPrefKey</string>
    <string name="title_closing_hop">Hop</string>
    <string name="summary_closing_hop">Alert me when the Hop is closing</string>

    <!-- Locations -->
    <string name="ui_locations_open_title">Open</string>
    <string name="ui_locations_collis_title">Collis</string>
    <string name="ui_locations_foco_title">53 Commons</string>
    <string name="ui_locations_hop_title">The Hop</string>
    <string name="ui_locations_kaf_title">KAF</string>
    <string name="ui_locations_novack_title">Novack</string>
    <string name="ui_locations_closed_title">Closed</string>

    <!-- Spinner for locations -->
    <string name="ui_locations_dayofweek_title">Day</string>

    <string-array name="ui_locations_spinner_entries">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    
    <string name="budget_interval_title">Budget Interval:</string>
     <string-array name="ui_budget_spinner_entries">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>

    <!-- Budget -->
    <string name="ui_budget_useravg_title">Your Avg</string>
    <string name="ui_budget_idealavg_title">Future Spending:</string>
    <string name="title_activity_prefs">PrefsActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="stay_logged_in">Stay signed in</string>
    <string name="preference_logged_in">preference_logged_in</string>
    
    <string name="btn_logout">Logout</string>
</resources>