<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center" >

    <TextView
        android:id="@+id/Swipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ui_balance_swipes_title"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/SwipeNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="5"
        android:textColor="#008000"
        android:textSize="45sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:background="#000000"
        android:gravity="center" />

    <TextView
        android:id="@+id/DBA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/ui_balance_dba_title"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/DBAAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="#008000"
        android:textSize="45sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/refresh"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Refresh"/>
        <!-- android:onClick="onRefreshClicked" -->
        <!-- ndroid:text="Refresh" /> -->

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
       
        android:onClick="onLogoutClicked"
        android:text="@string/btn_logout"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>